added a new file called env, and eddaed the CORS_ORIGIN , and exchanged it with the index origin address of localhost

--- a/tranquil/package.json
+++ b/tranquil/package.json
@@ -18,7 +18,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node src/index.js",
+    "dev": "nodemon tranquil/src/index.js",
+    "lint": "eslint src/",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -42,7 +44,7 @@
     ]
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
+  "main": "tranquil/src/index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
