fixed the package.json so that they can run throughh the browser when I user

--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
-    "name": "TranquilTour",
+    "name": "tranquiltour",
     "version": "1.0.0",
+    "description": "React example starter project",
+    "keywords": ["react", "starter"],
+    "main": "src/index.js",
     "dependencies": {
-      "dotenv": "^16.3.1"
-    }
+        "react": "18.0.0",
+        "react-dom": "18.0.0",
+        "reacr-scripts": "4.0.0"
+    },
+    "devDependencies": {
+        "@babel/runtime": "7.13.8", 
+        "typescript": "5.2.2"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scrpits test --env=jsdom",
+        "eject": "react-scripts eject"  
+    },
+    "browserlist": [">0.2%", "not dead", "not ie <=11", "not op_min"]
+
+
   }
   
